added global resource example

--- a/site/example/index.html
+++ b/site/example/index.html
@@ -1,5 +1,8 @@
-<CustomTemplate location="example_template.html" example_var="this is a template var passed through an argument">
-	<p>This template contents are on both the Polish and English site (zawartość szablonu jest i na polskiej i na angielskiej stronie)</p>
+<CustomTemplate location="example_template.html" example_var="this is a template var passed through an argument (ta zmienna szablonu przechodzi jako argument)">
+	<p>These template contents are on both the Polish and English site (zawartość szablonu jest i na polskiej i na angielskiej stronie)</p>
+
+	<p>This is an image from the RESOURCE_LOCATION path (To zdjęcie się znajduje w katalogu RESOURCE_LOCATION)</p>
+	<img src="/resource/girl_with_a_pearl_earring.jpg"/>
 
 	<p>Language: $LANG$</p>
 
