--- a/generated_site/pl/przykład/index.html
+++ b/generated_site/pl/przykład/index.html
@@ -11,8 +11,12 @@
 			To jest część szablonu.
 		</p>
 		<p>
-			This template contents are on both the Polish and English site (zawartość szablonu jest i na polskiej i na angielskiej stronie)
+			These template contents are on both the Polish and English site (zawartość szablonu jest i na polskiej i na angielskiej stronie)
 		</p>
+		<p>
+			This is an image from the RESOURCE_LOCATION path (To zdjęcie się znajduje w katalogu RESOURCE_LOCATION)
+		</p>
+		<img src="/resource/girl_with_a_pearl_earring.jpg"/>
 		<p>
 			Language: pl
 		</p>
@@ -31,7 +35,7 @@
 		<p>
 			Site path end: przykład
 		</p>
-		this is a template var passed through an argument
+		this is a template var passed through an argument (ta zmienna szablonu przechodzi jako argument)
 		<p>
 			To też jest część szablonu.
 		</p>
