Fixing inconsistency within example sit

--- a/generated_site/en/example/index.html
+++ b/generated_site/en/example/index.html
@@ -11,7 +11,7 @@
 			This is a part of the template.
 		</p>
 		<p>
-			These template contents are on both the Polish and English site (zawartość szablonu jest i na polskiej i na angielskiej stronie)
+			These template contents are on both the Polish and English site (Zawartość szablonu jest i na polskiej i na angielskiej stronie)
 		</p>
 		<p>
 			This is an image from the RESOURCE_LOCATION path (To zdjęcie się znajduje w katalogu RESOURCE_LOCATION)
@@ -35,7 +35,7 @@
 		<p>
 			Site path end: example
 		</p>
-		this is a template var passed through an argument (ta zmienna szablonu przechodzi jako argument)
+		This is a template var passed through an argument (Ta zmienna szablonu przechodzi jako argument)
 		<p>
 			This is alsa a part of the template.
 		</p>
