Added Polish in brackets for the bilanguage parts of the example site

--- a/generated_site/en/example/index.html
+++ b/generated_site/en/example/index.html
@@ -18,22 +18,22 @@
 		</p>
 		<img src="/resource/girl_with_a_pearl_earring.jpg"/>
 		<p>
-			Language: en
+			Language (Język): en
 		</p>
 		<p>
-			Site path: en/example
+			Site path (Ścieżka strony): en/example
 		</p>
 		<p>
-			Site path en: en/example
+			Site path (Ścieżka strony) en: en/example
 		</p>
 		<p>
-			Site path pl: pl/przykład
+			Site path (Ścieżka strony) pl: pl/przykład
 		</p>
 		<p>
-			Parent site path: en
+			Parent site path (Ścieżka strony nadrzędnej): en
 		</p>
 		<p>
-			Site path end: example
+			Site path end (Koniec ścieżki strony): example
 		</p>
 		This is a template var passed through an argument (Ta zmienna szablonu przechodzi jako argument)
 		<p>
