--- a/generated_site/pl/przykład/index.html
+++ b/generated_site/pl/przykład/index.html
@@ -18,22 +18,22 @@
 		</p>
 		<img src="/resource/girl_with_a_pearl_earring.jpg"/>
 		<p>
-			Language: pl
+			Language (Język): pl
 		</p>
 		<p>
-			Site path: pl/przykład
+			Site path (Ścieżka strony): pl/przykład
 		</p>
 		<p>
-			Site path en: en/example
+			Site path (Ścieżka strony) en: en/example
 		</p>
 		<p>
-			Site path pl: pl/przykład
+			Site path (Ścieżka strony) pl: pl/przykład
 		</p>
 		<p>
-			Parent site path: pl
+			Parent site path (Ścieżka strony nadrzędnej): pl
 		</p>
 		<p>
-			Site path end: przykład
+			Site path end (Koniec ścieżki strony): przykład
 		</p>
 		This is a template var passed through an argument (Ta zmienna szablonu przechodzi jako argument)
 		<p>
