--- a/site/example/index.html
+++ b/site/example/index.html
@@ -4,14 +4,14 @@
 	<p>This is an image from the RESOURCE_LOCATION path (To zdjęcie się znajduje w katalogu RESOURCE_LOCATION)</p>
 	<img src="/resource/girl_with_a_pearl_earring.jpg"/>
 
-	<p>Language: $LANG$</p>
+	<p>Language (Język): $LANG$</p>
 
-	<p>Site path: $PATH$</p>
-	<p>Site path en: $PATH[en]$</p>
-	<p>Site path pl: $PATH[pl]$</p>
+	<p>Site path (Ścieżka strony): $PATH$</p>
+	<p>Site path (Ścieżka strony) en: $PATH[en]$</p>
+	<p>Site path (Ścieżka strony) pl: $PATH[pl]$</p>
 
-	<p>Parent site path: $PARENTPATH$</p>
+	<p>Parent site path (Ścieżka strony nadrzędnej): $PARENTPATH$</p>
 
-	<p>Site path end: $PATHEND$</p>
+	<p>Site path end (Koniec ścieżki strony): $PATHEND$</p>
 
 </CustomTemplate>
